[metadata]
name = tessilator
description = The one-stop shop for measuring TESS rotation periods
long_description = file: README.md
author = Alex Binks & Moritz Guenther
author_email = abinks@mit.edu
url = https://github.com/alexbinks/tessilator
license = MIT License
copyright = 2023, Alex Binks & Moritz Guenther


[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy
    astroquery
    photutils
    scipy
    matplotlib
    pyinputplus

[options.entry_points]
console_scripts =
    run_tess_sectors = tessilator.scripts.run_tess_sectors:main
    run_tess_cutouts = tessilator.scripts.run_tess_cutouts:main

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-astropy
    numpydoc
test = 
    pytest-astropy
    sphinx-astropy

[options.package_data]
tessilator.tests = ABDor_tests/*.fits
tessilator.tests = ABDor_tests/ABDor_36_4_3_phot_out_fixed.tab

    
[tool:pytest]
addopts = -v
